<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>

   <groupId>ro.gs1</groupId>
   <artifactId>jaxb-tools</artifactId>
   <version>0.1-SNAPSHOT</version>

   <name>jaxb-tools</name>
   <description>JAXB XJC plugins that generate toString, equals, hashCode, inheritance and simplify methods for JAXB-generated classes.</description>
   <url>https://github.com/gs1-romania/jaxb-tools</url>

   <licenses>
      <license>
         <name>The Apache Software License, Version 2.0</name>
         <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
         <distribution>repo</distribution>
      </license>
   </licenses>

   <scm>
      <connection>scm:git:https://github.com/gs1-romania/jaxb-tools.git</connection>
      <url>scm:git:https://github.com/gs1-romania/jaxb-tools.git</url>
      <developerConnection>scm:git:https://github.com/gs1-romania/jaxb-tools.git</developerConnection>
      <tag>HEAD</tag>
   </scm>
   <developers>
      <developer>
         <id>liviu</id>
         <name>Liviu Gabriel Savu</name>
         <email>liviu.savu@gs1.ro</email>
         <organization>GS1 ROMANIA</organization>
         <organizationUrl>https://www.gs1.ro</organizationUrl>
         <timezone>+2</timezone>
      </developer>
   </developers>
   <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <maven.compiler.source>11</maven.compiler.source>
      <maven.compiler.target>11</maven.compiler.target>
      <version.junit>4.13.2</version.junit>
      <version.jaxb.xjc>4.0.7</version.jaxb.xjc>
      <version.slf4j>2.0.17</version.slf4j>
      <version.commons.lang3>3.20.0</version.commons.lang3>
      <version.commons.collections>4.5.0</version.commons.collections>
      <version.jaxb.api>4.0.2</version.jaxb.api>
   </properties>

   <dependencies>
      <dependency>
         <groupId>org.glassfish.jaxb</groupId>
         <artifactId>jaxb-xjc</artifactId>
         <version>${version.jaxb.xjc}</version>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>jakarta.xml.bind</groupId>
         <artifactId>jakarta.xml.bind-api</artifactId>
         <version>${version.jaxb.api}</version>
      </dependency>
      <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
         <version>${version.commons.lang3}</version>
      </dependency>
      <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-collections4</artifactId>
         <version>${version.commons.collections}</version>
      </dependency>
      <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>${version.slf4j}</version>
      </dependency>
      <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-simple</artifactId>
         <version>${version.slf4j}</version>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.glassfish.jaxb</groupId>
         <artifactId>jaxb-runtime</artifactId>
         <version>${version.jaxb.xjc}</version>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>${version.junit}</version>
         <scope>test</scope>
      </dependency>
   </dependencies>

   <build>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>3.2.8</version>
            <executions>
               <execution>
                  <id>sign-artifacts</id>
                  <phase>verify</phase>
                  <goals>
                     <goal>sign</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>
      </plugins>
      <pluginManagement>
         <plugins>
            <plugin>
               <artifactId>maven-clean-plugin</artifactId>
               <version>3.5.0</version>
            </plugin>
            <plugin>
               <artifactId>maven-resources-plugin</artifactId>
               <version>3.3.1</version>
            </plugin>
            <plugin>
               <artifactId>maven-compiler-plugin</artifactId>
               <version>3.13.0</version>
            </plugin>
            <plugin>
               <artifactId>maven-surefire-plugin</artifactId>
               <version>3.5.2</version>
            </plugin>
            <plugin>
               <artifactId>maven-jar-plugin</artifactId>
               <version>3.4.2</version>
            </plugin>
            <plugin>
               <artifactId>maven-install-plugin</artifactId>
               <version>3.1.3</version>
            </plugin>
            <plugin>
               <artifactId>maven-deploy-plugin</artifactId>
               <version>3.1.3</version>
            </plugin>
            <plugin>
               <artifactId>maven-site-plugin</artifactId>
               <version>3.12.1</version>
            </plugin>
            <plugin>
               <artifactId>maven-project-info-reports-plugin</artifactId>
               <version>3.9.0</version>
            </plugin>
            <plugin>
               <artifactId>maven-release-plugin</artifactId>
               <version>3.1.1</version>
               <configuration>
                  <scmCommentPrefix>[ci skip]</scmCommentPrefix>
                  <testFailureIgnore>true</testFailureIgnore>
               </configuration>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-source-plugin</artifactId>
               <version>3.3.1</version>
               <executions>
                  <execution>
                     <id>attach-sources</id>
                     <goals>
                        <goal>jar-no-fork</goal>
                     </goals>
                  </execution>
               </executions>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-javadoc-plugin</artifactId>
               <version>3.11.2</version>
               <configuration>
                  <doclint>none</doclint>
               </configuration>
               <executions>
                  <execution>
                     <id>attach-javadocs</id>
                     <goals>
                        <goal>jar</goal>
                     </goals>
                  </execution>
               </executions>
            </plugin>
         </plugins>
      </pluginManagement>
   </build>
   <profiles>
      <profile>
         <id>github</id>
         <properties>
            <project.scm.id>github</project.scm.id>
         </properties>
         <distributionManagement>
            <repository>
               <id>github</id>
               <name>GitHub GS1 Apache Maven Packages</name>
               <url>https://maven.pkg.github.com/gs1-romania/jaxb-tools</url>
            </repository>
            <snapshotRepository>
               <id>github</id>
               <name>GitHub GS1 Apache Maven Packages snapshots</name>
               <url>https://maven.pkg.github.com/gs1-romania/jaxb-tools</url>
            </snapshotRepository>
         </distributionManagement>
         <repositories>
            <repository>
               <id>github</id>
               <url>https://maven.pkg.github.com/gs1-romania/jaxb-tools</url>
               <snapshots>
                  <enabled>true</enabled>
               </snapshots>
               <releases>
                  <enabled>true</enabled>
               </releases>
            </repository>
         </repositories>
      </profile>
      <profile>
         <id>release-sona</id>
         <properties>
            <project.scm.id>central</project.scm.id>
         </properties>
         <build>
            <plugins>
               <plugin>
                  <groupId>org.sonatype.central</groupId>
                  <artifactId>central-publishing-maven-plugin</artifactId>
                  <version>0.6.0</version>
                  <extensions>true</extensions>
                  <configuration>
                     <publishingServerId>central</publishingServerId>
                     <autoPublish>true</autoPublish>
                  </configuration>
               </plugin>
            </plugins>
         </build>
      </profile>
      <profile>
         <id>release-github</id>
         <properties>
            <project.scm.id>github</project.scm.id>
         </properties>
      </profile>
   </profiles>
</project>
